# comet

./: .gitignore  CMakeLists.txt  README.md  filesystem.cpp  input.cpp  logger.cpp  main.cpp  mpris_function.cpp  mpris_handler.cpp  mpris_signal_handler.cpp  player.cpp  q  song_manager.cpp  util.cpp
dbus/: mpris.c  mpris.h  service.xml
include/: filesystem.h  input.h  logger.h  miniaudio_error_map.h  mpris_function.h  mpris_handler.h  mpris_signal_handler.h  player.h  player_response_state.h  saved_song_loadback.h  song.h  song_manager.h  util.h
mpris/: mpris_handler.cpp
mpris/include/: mpris_function.h  mpris_handler.h  mpris_signal_handler.h
